@@ -296,14 +296,14 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:TWAIN 2.0 DS 32bit Sample"
-        "ProductCode" = "8:{5147D271-675D-424F-9841-0AA1E034F685}"
-        "PackageCode" = "8:{CC446D88-F633-412A-95F0-46D3E09C40B0}"
+        "ProductCode" = "8:{3CCB3EA9-AC23-46B4-9C5A-D0C22610E8EE}"
+        "PackageCode" = "8:{BE46C23F-96E4-44FB-B4A6-85B3A4DCC440}"
         "UpgradeCode" = "8:{42397C41-AA95-45D0-A500-A692EB1A93B4}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:1.0.5"
+        "ProductVersion" = "8:1.0.6"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/phpBB2/index.php"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
