@@ -291,14 +291,14 @@
         {
         "Name" = "8:Microsoft Visual Studio"
         "ProductName" = "8:TWAIN 2.0 DS 64bit Sample"
-        "ProductCode" = "8:{21B76EBB-2D69-434A-ACF9-204A1169744A}"
-        "PackageCode" = "8:{DD598F22-9318-4D81-B40B-7D37642360C4}"
+        "ProductCode" = "8:{438A7FD2-98F2-432C-BA3A-66C94C2EB705}"
+        "PackageCode" = "8:{D3E3C882-E4A1-43CD-9245-E99694E832B9}"
         "UpgradeCode" = "8:{C2305D08-ACCD-48FD-8147-F655F8356F23}"
         "RestartWWWService" = "11:FALSE"
         "RemovePreviousVersions" = "11:FALSE"
         "DetectNewerInstalledVersion" = "11:TRUE"
         "InstallAllUsers" = "11:TRUE"
-        "ProductVersion" = "8:1.0.5"
+        "ProductVersion" = "8:1.0.6"
         "Manufacturer" = "8:TWAIN Working Group"
         "ARPHELPTELEPHONE" = "8:http://www.twainforum.org/phpBB2/index.php"
         "ARPHELPLINK" = "8:http://sourceforge.net/projects/twain-samples/"
